# proxsuite

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gersemirc  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  1-Overview_8md.html  1-_overview_8md.html  2-ProxQP__api_8md.html  2-_prox_q_p__api_8md.html  3-ProxQP__solve_8md.html  3-_prox_q_p__solve_8md.html  4-linearsolvers_8md.html  4-qplayer_8md.html  5-installation_8md.html  CHANGELOG.md  CITATION.bib  CITATION.cff  CMakeLists.txt  LICENSE  README.md  ____init_____8py.html  ____init_____8py.js  ____init_____8py_source.html  address_8hpp.html  address_8hpp.js  address_8hpp__dep__incl.dot  address_8hpp__dep__incl.map  address_8hpp__dep__incl.md5  address_8hpp__incl.dot  address_8hpp__incl.map  address_8hpp__incl.md5  address_8hpp_source.html  annotated.html  annotated_dup.js  archive_8hpp.html  archive_8hpp.js  archive_8hpp__incl.map  (+5066 more)
benchmark/: CMakeLists.txt  timings-box-constraints.cpp  timings-dense-backend.cpp  timings-diagonal-hessian.cpp  timings-lp.cpp  timings-parallel.cpp  timings-parallel.py
benchmark/include/: nanobench.h  util.hpp
benchmark/src/: factorize.cpp  nanobench_main.cpp  osqp.cpp  osqp_py.cpp  parser.cpp  qp_eq.cpp  qp_in.cpp  qpalm.cpp  qpalm_py.cpp  rank_update.cpp  update.cpp
bindings/python/: CMakeLists.txt
bindings/python/helpers/: instruction-set.cpp
bindings/python/proxsuite/: __init__.py
bindings/python/src/: algorithms.hpp  expose-all.cpp  expose-backward.hpp  expose-helpers.hpp  expose-ldlt.hpp  expose-model.hpp  expose-parallel.hpp  expose-qpobject.hpp  expose-qpvector.hpp  expose-results.hpp  expose-settings.hpp  expose-solve.hpp  expose-workspace.hpp  helpers.hpp  optional-eigen-fix.hpp  optional.hpp
bindings/python/src/common/: expose.hpp  (+1 more)
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
examples/: CMakeLists.txt  init_dense_qp.cpp  init_dense_qp.py  init_dense_qp_with_other_options.cpp  init_dense_qp_with_other_options.py  loading_sparse_qp.cpp  loading_sparse_qp.py  overview-simple.py  solve_dense_qp.cpp  solve_dense_qp.py  solve_dense_qp_with_setting.cpp  solve_dense_qp_with_setting.py  solve_without_api.cpp  solve_without_api.py  solve_without_api_and_option.py  update_dense_qp.py  update_dense_qp_ws_previous_result.py  update_sparse_qp.cpp
examples/cpp/: CMakeLists.txt  benchmark_dense_qp.cpp  estimate_nonconvex_eigenvalue.cpp  first_example.cpp  first_example_dense.cpp  first_example_dense_eq.cpp  first_example_dense_eq_and_ineq.cpp  first_example_primal_infeasible.cpp  first_example_sparse.cpp  init_dense_qp.cpp  init_dense_qp_with_box.cpp  init_dense_qp_with_other_options.cpp  init_dense_qp_with_timings.cpp  init_with_default_options.cpp  initializing_with_none.cpp  initializing_with_none_without_api.cpp  loading_dense_qp.cpp  loading_dense_qp_with_box_ineq.cpp  loading_dense_qp_with_different_backend_choice.cpp  loading_sparse_qp.cpp  osqp_box_constraints.cpp  osqp_first_example_dense.cpp  osqp_first_example_dense_eq.cpp  osqp_first_example_dense_eq_and_ineq.cpp  osqp_overview-simple.cpp  osqp_overview-simple_eq.cpp  osqp_primal_ldlt.cpp  osqp_solve_without_api_and_option.cpp  osqp_solve_without_api_simple.cpp  osqp_update_dense_qp.cpp  osqp_update_dense_qp_ws_previous_result.cpp  overview-simple.cpp  solve_dense_qp.cpp  solve_dense_qp_with_setting.cpp  solve_without_api.cpp  solve_without_api_and_option.cpp  solve_without_api_simple.cpp  update_dense_qp.cpp  update_dense_qp_ws_previous_result.cpp  update_sparse_qp.cpp
examples/julia/: CMakeLists.txt  overview-simple.jl
examples/python/: CMakeLists.txt  estimate_nonconvex_eigenvalue.py  init_dense_qp.py  init_dense_qp_with_box.py  init_dense_qp_with_other_options.py  init_dense_qp_with_timings.py  init_with_default_options.py  initializing_with_none.py  initializing_with_none_without_api.py  loading_dense_qp.py  loading_dense_qp_with_box_ineq.py  loading_dense_qp_with_different_backend_choice.py  loading_sparse_qp.py  osqp_solve_dense_qp.py  overview-simple.py  qplayer_sudoku.py  solve_dense_lp.py  solve_dense_qp.py  solve_dense_qp_with_setting.py  solve_without_api.py  solve_without_api_and_option.py  update_dense_qp.py  update_dense_qp_ws_previous_result.py  update_sparse_qp.py  util.py
examples/python/data/: features.pt  labels.pt
test/: CMakeCache.txt  CMakeLists.txt
test/data/: simple_qp_with_inifinity_lower_bound.mat
test/data/maros_meszaros_data/: AUG2D.mat  AUG2DC.mat  AUG2DCQP.mat  AUG2DQP.mat  AUG3D.mat  AUG3DC.mat  AUG3DCQP.mat  AUG3DQP.mat  BOYD1.mat  BOYD2.mat  CONT-050.mat  CONT-100.mat  CONT-101.mat  CONT-200.mat  CONT-201.mat  CONT-300.mat  CVXQP1_L.mat  CVXQP1_M.mat  CVXQP1_S.mat  CVXQP2_L.mat  CVXQP2_M.mat  CVXQP2_S.mat  CVXQP3_L.mat  CVXQP3_M.mat  CVXQP3_S.mat  DPKLO1.mat  DTOC3.mat  DUAL1.mat  DUAL2.mat  DUAL3.mat  DUAL4.mat  DUALC1.mat  DUALC2.mat  DUALC5.mat  DUALC8.mat  GENHS28.mat  GOULDQP2.mat  GOULDQP3.mat  HS118.mat  HS21.mat  (+98 more)
test/doctest/: doctest.cpp  doctest.hpp
test/include/: cnpy.hpp  doctest.h  maros_meszaros.hpp  osqp.hpp  qpalm.hpp  util.hpp  util_f32.hpp  util_f64.hpp  utils.hpp
test/packaging/cmake/: CMakeLists.txt
test/packaging/src/: run-proxqp.cpp
test/src/: SaveQpEq.py  append.cpp  backward.cpp  bench_maros_meszaros.cpp  bench_maros_meszaros_sparse.cpp  cnpy.cpp  cvxpy.cpp  cvxpy.py  dense_backward.cpp  dense_maros_meszaros.cpp  dense_qp_eq.cpp  dense_qp_serialization.cpp  dense_qp_serialization.py  dense_qp_solve.cpp  dense_qp_solve.py  dense_qp_with_eq_and_in.cpp  dense_qp_wrapper.cpp  dense_qp_wrapper.py  dense_ruiz_equilibration.cpp  dense_unconstrained_qp.cpp  doctest_main.cpp  ldlt_delete.cpp  ldlt_insert.cpp  ldlt_roundtrip.cpp  ldlt_wrapper_solve.cpp  mu_update_roundtrip.cpp  osqp_cvxpy.cpp  osqp_cvxpy.py  osqp_dense_backward.cpp  osqp_dense_maros_meszaros.cpp  osqp_dense_qp_eq.cpp  osqp_dense_qp_solve.cpp  osqp_dense_qp_solve.py  osqp_dense_qp_with_eq_and_in.cpp  osqp_dense_qp_wrapper.cpp  osqp_dense_qp_wrapper.py  osqp_dense_ruiz_equilibration.cpp  osqp_dense_unconstrained_qp.cpp  parallel_qp_solve.cpp  parallel_qp_solve.py  (+37 more)
(+914 files in other folders)
