<?xml version="1.0"?>
<package format="3">
  <name>proxsuite</name>
  <version>0.3.2</version>
  <description>The Advanced Proximal Optimization Toolbox</description>
  <maintainer email="antoine.bambade@inria.fr">Antoine Bambade</maintainer>
  <maintainer email="fabian.schramm@inria.fr">Fabian Schramm</maintainer>
  <maintainer email="justin.carpentier@inria.fr">Justin Carpentier</maintainer>
  <license>BSD-2</license>

  <url type="website">https://github.com/Simple-Robotics/proxsuite</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <depend>eigen</depend>
  <depend condition="$ROS_DISTRO == humble">simde</depend>
  <depend condition="$ROS_DISTRO == rolling">simde</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</depend>
  <test_depend>matio</test_depend>

  <!-- The following tag is recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
