<?xml version="1.0"?>
<package format="3">
  <name>proxsuite</name>
  <version>0.6.6</version>
  <description>The Advanced Proximal Optimization Toolbox</description>
  <!-- Project maintainers -->
  <maintainer email="justin.carpentier@inria.fr">Justin Carpentier</maintainer>

  <!-- ROS buildfarm release -->
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>

  <license>BSD-2</license>

  <!-- Core authors - cf. CITATION.bib and CITATION.cff -->
  <author email="antoine.bambade@inria.fr">Antoine Bambade</author>
  <author>Adrien Taylor</author>
  <author email="fabian.schramm@inria.fr">Fabian Schramm</author>
  <author>Sarah El-Kazdadi</author>
  <author email="justin.carpentier@inria.fr">Justin Carpentier</author>

  <url type="website">https://simple-robotics.github.io/proxsuite</url>
  <url type="repository">https://github.com/Simple-Robotics/proxsuite</url>
  <url type="bugtracker">https://github.com/Simple-Robotics/proxsuite/issues</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <depend>eigen</depend>
  <!-- simde is only available for Ubuntu 22.04 -->
  <depend condition="$ROS_DISTRO == humble or $ROS_DISTRO == rolling or $ROS_DISTRO == iron or $ROS_DISTRO == jazzy">simde</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</depend>
  <test_depend>matio</test_depend>

  <!-- The following tag is recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
