[project]
name = "proxsuite"
version = "0.0.1"
description = "Quadratic Programming Solver for Robotics and beyond."
readme = "README.md"
requires-python = ">= 3.8"
license = "BSD-2-Clause"


[project.urls]
homepage = "https://github.com/Simple-Robotics/proxsuite"
repository = "https://github.com/Simple-Robotics/proxsuite.git"
changelog = "https://github.com/Simple-Robotics/proxsuite/CHANGELOG.md"

[build-system]
requires = ["cmeel[build]"]
build-backend = "cmeel.build"
configure-args = ["-DBUILD_TESTING:BOOL=OFF","-DBUILD_PYTHON_INTERFACE:BOOL=ON","-DBUILD_WITH_VECTORIZATION_SUPPORT:BOOL=ON","-DINSTALL_DOCUMENTATION:BOOL=OFF"]